# seat_car_simulator

./: README.md
color_plugin/: CMakeLists.txt  package.xml
color_plugin/include/: color_plugin.h
color_plugin/src/: color_plugin.cc
road_description/: CMakeLists.txt  package.xml
road_description/launch/: spawn_box.launch  spawn_ceiling.launch  spawn_circuit.launch  spawn_cylinder.launch  spawn_obstacles_final.launch  spawn_obstacles_full.launch  spawn_obstacles_lab.launch  spawn_obstacles_test.launch  spawn_road.launch  spawn_trafficlights.launch
road_description/urdf/box/: box.xacro  gazebo.gazebo  urdf.xacro
road_description/urdf/ceiling/: ball_macro.xacro  colors.txt  panel_macro.xacro
road_description/urdf/circuits/full/: ceiling_panels.xacro  map.txt  road.xacro  trafficlights_fixed.xacro
road_description/urdf/circuits/lab/: ceiling_panels.xacro  map.txt  road.xacro  trafficlights_extra_example.xacro  trafficlights_fixed.xacro
road_description/urdf/circuits/other/: circuit_8.xacro  circuit_o.xacro
road_description/urdf/circuits/test/: ceiling_balls.xacro  ceiling_panels.xacro  map.txt  road.xacro  trafficlights.xacro  trafficlights_fixed.xacro
road_description/urdf/cylinder/: cylinder.xacro  gazebo.gazebo  urdf.xacro
road_description/urdf/roads/dae/: empty.dae  final.dae  full.dae  lab.dae  left90.dae  right90.dae  straight.dae  t_stop.dae  test.dae  x_stop.dae
road_description/urdf/trafficlight/: signal_macro.xacro  trafficlight_macro.xacro
road_description/urdf/trafficlight/dae/: alvar0.dae  alvar1.dae  arrow_left.dae  arrow_right.dae  tag47.dae  tag57.dae  tag74.dae  tag95.dae
seat_car_control/: CMakeLists.txt  package.xml
seat_car_control/config/: control.yaml
seat_car_control/launch/: control.launch
seat_car_controller/: CMakeLists.txt  package.xml  ros_control_plugins.xml
seat_car_controller/include/: seat_car_controller.h  seat_car_controller_impl.h
seat_car_controller/src/: seat_car_controller.cpp
seat_car_description/: CMakeLists.txt  package.xml
seat_car_description/config/: debug.rviz  description.rviz  seat_car.rviz
seat_car_description/launch/: description.launch  description_test.launch  spawn_car.launch
seat_car_description/urdf/: car.xacro
seat_car_description/urdf/include/: platform.gazebo  platform.xacro  sensors.gazebo  sensors.xacro
seat_car_description/urdf/include/road_old/: road.dae  road.gazebo  road.xacro  road_env.xacro
seat_car_description/urdf/include/sensors/: front_rgb_camera.gazebo  front_rgbd_camera.gazebo  imu.gazebo  laser.gazebo  top_camera.gazebo
seat_car_gazebo/: CMakeLists.txt  package.xml
seat_car_gazebo/launch/: sim.launch  world.launch
seat_car_gazebo/models/building/: model.sdf
seat_car_gazebo/worlds/: building.world  empty.world
seat_car_simulator/: CMakeLists.txt  package.xml
