<?xml version="1.0"?>
<package>
  <name>seat_car_simulator</name>
  <version>0.0.0</version>
  <description>
    Developed at IRI, Institut de Robòtica i Informàtica Industrial, CSIC-UPC:
    www.iri.upc.edu

    Provides a Gazebo simulation of a scaled 1:10 vehicle:
    https://github.com/AutoModelCar/AutoModelCarWiki/wiki

    Used in the SEAT Autonomous Driving Challenge:
    http://www.autonomousdrivingchallenge.com
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shernand@iri.upc.edu">shernand</maintainer>
  <maintainer email="fherrero@iri.upc.edu">fherrero</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPL</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/seat_car_simulator</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="shernand@iri.upc.edu">shernand</author>
  <author email="fherrero@iri.upc.edu">fherrero</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>color_plugin</run_depend>
  <run_depend>road_description</run_depend>
  <run_depend>seat_car_control</run_depend>
  <run_depend>seat_car_controller</run_depend>
  <run_depend>seat_car_description</run_depend>
  <run_depend>seat_car_gazebo</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <metapackage/>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
